minor fixes for the positioning / spacing of buttons and form fields

--- a/Tabs_N_Blanks/css/shop.css
+++ b/Tabs_N_Blanks/css/shop.css
@@ -182,7 +182,8 @@
 
       .product-listing a.button-default {
         float: left;
-        margin-left: 3.5em;
+        margin-left: 3em;
+        margin-right: 0;
       }
 
     }
